# mechanisms-of-action-prediction

./: .gitignore  Dockerfile  check.py  config.yml  docker-compose.yml  pyproject.toml  requirements.txt  train.py  train_2.py  train_pure.py
notebook/: EDA.ipynb
src/: dataset.py  lightning.py  lightning_2.py  model.py  trainer.py  utils.py
