[tool.poetry]
name = "mechanisms-of-action-prediction"
version = "0.1.0"
description = ""
authors = ["navitacion"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.2"
pandas = "^1.1.2"
matplotlib = "3.3.0"
seaborn = "^0.11.0"
scikit-learn = "^0.23.2"
tqdm = "^4.50.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
